--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             <img height="40" src="/anonymous.png" alt="">
             <h1>Anonymous</h1>
         </div>
-        <p align="center" style='color:white;'>Don't trust anyone</p>
-        <div class="message__area"></div>
+        <div class="message__area">
+            <div class="incoming ">
+                <p align="center" style='color:white;background: #3c3b3b;'>Don't Trust Anyone</p>
+            </div>
+        </div>
         <div>
             <textarea id="textarea" cols="30" rows="1" placeholder="Write a message..."></textarea>
         </div>
