--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
     <section class="chat__section">
         <div class="brand">
-            <img height="40" src="/anonymous.png" alt="">
+            <img height="40" src="/anonymous.png" alt="error to load an image" style="border-radius: 50%;">
             <h1>Anonymous</h1>
         </div>
         <div class="message__area">
             <div class="incoming ">
-                <p align="center" style='color:white;background: #3c3b3b;'>Don't Trust Anyone</p>
             </div>
         </div>
         <div>
