--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>anonymous chatroom</title>
+    <title>command tech co limited chatroom</title>
     <link rel="stylesheet" href="/style.css">
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
+            integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
+            crossorigin="anonymous"
+        />
 </head>
 
 <body>
     <section class="chat__section">
         <div class="brand">
-            <img height="40" src="/anonymous.png" alt="error to load an image" style="border-radius: 50%;">
-            <h1>Anonymous</h1>
+            <h1><i class="fas fa-terminal"></i>&nbsp;command_tech</h1>
         </div>
         <div class="message__area">
             <div class="incoming ">
